...
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="search_results">Search results</string>
    <string name="preferences_action">Settings</string>
    <string name="account_settings_action">Account settings</string>
    <string name="informations_action">Informations</string>
    <string name="folder_settings_action">Folder settings</string>
    <string name="global_settings_action">Global settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="clear_pending_action">Clear pending actions (danger!)</string>
    <string name="update_account_action">Update account</string>

    <string name="mark_as_read_action">Mark as read</string>
    <string name="send_alternate_action">Share</string>
    <string name="send_alternate_chooser_title">Choose sender</string>

    <string name="flag_action">Add star</string>
    <string name="unflag_action">Remove star</string>
    <string name="copy_action">Copy</string>
    <string name="select_text_action">Select text</string>
    <string name="show_headers_action">Show headers</string>
    <string name="hide_headers_action">Hide headers</string>
    <plurals name="copy_address_to_clipboard">
...
    <string name="account_setup_failed_dlg_title">Setup could not finish</string>
    <string name="account_setup_failed_dlg_auth_message_fmt">Username or password incorrect.</string>
    <string name="account_setup_failed_dlg_password_too_simple_message_fmt">Password too simple.</string>
    <string name="account_setup_failed_dlg_certificate_message_fmt">The server presented an invalid SSL certificate. Sometimes, this is because of a server misconfiguration. Sometimes it is because someone is trying to attack you or your mail server. If you\'re not sure what\'s up, click Reject and contact the folks who manage your mail server.\n\n(<xliff:g id="error">%s</xliff:g>)</string>
    <string name="account_setup_failed_dlg_server_message_fmt">Cannot connect to server.</string>
    <string name="account_setup_failed_dlg_edit_details_action">Edit details</string>
    <string name="account_password_too_simple_failed_dlg_edit_details_action">Change password</string>
    <string name="account_setup_failed_dlg_continue_action">Continue</string>

    <string name="account_settings_push_advanced_title">Advanced</string>
    <string name="account_settings_title_fmt">Account settings</string>
    <string name="account_settings_default_label">Default account</string>
    <string name="account_settings_default_summary">Send mail from this account by default</string>
...
    <string name="sort_flagged_last">Unstarred messages first</string>
    <string name="sort_unread_first">Unread messages first</string>
    <string name="sort_unread_last">Read messages first</string>
    <string name="sort_attach_first">Messages with attachments first</string>
    <string name="sort_unattached_first">Messages without attachments first</string>

    <string name="sort_by">Sort by…</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_arrival">Arrival</string>
    <string name="sort_by_subject">Subject</string>
    <string name="sort_by_sender">Sender</string>
    <string name="sort_by_flag">Star</string>
    <string name="sort_by_unread">Read/unread</string>
    <string name="sort_by_attach">Attachments</string>

    <string name="account_delete_dlg_title">Remove Account</string>

    <string name="account_recreate_dlg_title">Recreate Account</string>

    <string name="account_clear_dlg_title">Clear Account</string>
...

    <string name="background_ops_label">Background sync</string>
    <string name="background_ops_never">Never</string>
    <string name="background_ops_always">Always</string>
    <string name="background_ops_auto_sync_only">When \'Auto-sync\' is checked</string>

    <string name="batch_select_all">Select all</string>

    <string name="account_setup_push_limit_label">Max folders to check with push</string>
    <string name="account_setup_push_limit_10">10 folders</string>
    <string name="account_setup_push_limit_25">25 folders</string>
    <string name="account_setup_push_limit_50">50 folders</string>
    <string name="account_setup_push_limit_100">100 folders</string>
...
    <string name="global_settings_show_contact_picture_summary">Show contact pictures in the message list</string>

    <string name="last_refresh_time_format">Refreshed <xliff:g id="formatted_time">%s</xliff:g></string>
    <string name="last_refresh_time_format_with_push">Refreshed <xliff:g id="time_with_preposition">%s</xliff:g> (Push active)</string>
    <string name="preposition_for_date">on <xliff:g id="date">%s</xliff:g></string>

    <string name="mark_all_as_read">Mark all as read</string>

    <string name="global_settings_colorize_missing_contact_pictures_label">Colorize contact pictures</string>
    <string name="global_settings_colorize_missing_contact_pictures_summary">Colorize missing contact pictures</string>

    <string name="global_settings_messageview_visible_refile_actions_title">Visible message actions</string>
    <string name="global_settings_messageview_visible_refile_actions_summary">Show selected actions in the message view menu</string>
...
    <string name="special_mailbox_name_trash_fmt">Trash</string>
    <string name="special_mailbox_name_sent_fmt">Sent</string>
    <string name="special_mailbox_name_archive_fmt">Archive</string>
    <string name="special_mailbox_name_spam_fmt">Spam</string>
    <string name="status_last_poll">Last poll <xliff:g id="lasttime">%s</xliff:g></string>
    <string name="customize_categories">Customize your home page</string>
    <string name="menu_item_customize">customize</string>

    <string name="tab_mail">mail</string>
    <string name="tab_news">news</string>
    <string name="tab_video">video</string>
    <string name="tab_offers">offers</string>

...
