...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:gravity="bottom"
                    android:hint="@string/account_setup_basics_email_hint"
                    android:layout_toLeftOf="@+id/account_domain"
...
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    style="@style/Body1Style" />
            </RelativeLayout>

            <EditText
                android:id="@+id/account_password"
                android:inputType="textPassword"
                android:hint="@string/account_setup_basics_password_hint"
                android:lines="1"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:nextFocusDown="@+id/next"
                style="@style/Body1Style" />

            <CheckBox
                android:id="@+id/show_password"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/account_setup_basics_show_password"
                style="@style/CaptionStyle" />

            <com.tiscali.appmail.view.ClientCertificateSpinner
...
