<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_mail"
        android:title="@string/tab_mail"
        android:icon="@drawable/ic_mail_white" />

    <item
        android:id="@+id/menu_news"
        android:title="@string/tab_news"
        android:icon="@drawable/ic_news_white" />

    <item
        android:id="@+id/menu_video"
        android:title="@string/tab_video"
        android:icon="@drawable/ic_video_white" />

    <item
        android:id="@+id/menu_offers"
        android:title="@string/tab_offers"
        android:icon="@drawable/ic_offers_white" />
</menu>
