<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:title="@string/delete_action"
        app:showAsAction="always"
        android:icon="?attr/iconActionDelete" />
    <item
        android:id="@+id/mark_as_read"
        android:title="@string/mark_as_read_action"
        app:showAsAction="always"
        android:icon="?attr/iconActionMarkAsRead" />
    <item
        android:id="@+id/mark_as_unread"
        android:title="@string/mark_as_unread_action"
        app:showAsAction="always"
        android:icon="?attr/iconActionMarkAsUnread" />
    <item
        android:id="@+id/archive"
        android:title="@string/archive_action"
...
